# pico-detect

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust.yml  test.yml
assets/: Lenna_(test_image).txt  Lenna_grayscale_test.txt  test_image.eye
benches/: benchmarks.rs  clusterizer.rs  clusterizer_bench.rs  detector.rs  detector_bench.rs  lib.rs  localizer.rs  localizer_bench.rs  multiscaler.rs  multiscaler_bench.rs  perturbator.rs  perturbator_bench.rs  shaper.rs  shaper_bench.rs
benches/common/: macros.rs  mod.rs
examples/: cli.rs  find_face.rs  print-init-shape.rs  run-pico-model.rs
examples/detect-faces/: args.rs  face.rs  init.rs  main.rs  models.rs  shape.rs  utils.rs
src/: bintest.rs  core.rs  detection.rs  detector.rs  geometry.rs  imageutils.rs  iou.rs  lib.rs  localizer.rs  models.rs  multiscale.rs  node.rs  shaper.rs  test_utils.rs  utils.rs
src/clusterizer/: builder.rs  mod.rs
src/detect/: clusterize.rs  detection.rs  mod.rs  multiscale.rs  padding.rs
src/detect/detector/: mod.rs  tree.rs
src/detector/: mod.rs
src/geometry/: iou.rs  mod.rs  square.rs  target.rs
src/localize/: mod.rs  perturbate.rs
src/localize/localizer/: mod.rs
src/localizer/: mod.rs
src/multiscaler/: mod.rs
src/nodes/: comparison.rs  mod.rs  threshold.rs
src/perturbator/: builder.rs  mod.rs
src/shape/: delta.rs  forest.rs  mod.rs  tree.rs  utils.rs
src/shaper/: mod.rs
src/traits/: mod.rs  region.rs
src/utils/: clusterizer.rs  detection.rs  img.rs  iou.rs  mod.rs  multiscaler.rs  padding.rs  perturbator.rs  region.rs  square.rs  target.rs
tests/: detector_test.rs  localizer_test.rs  multiscaler_test.rs  perturbator_test.rs  shaper_test.rs  validation.rs
tests/common/: mod.rs
