[package]
name = "pico-detect"
version = "0.6.0"
authors = ["Rostyslav Bohomaz <rostyslav.db@gmail.com>"]
edition = "2018"
keywords = ["pico", "detection", "localization", "prediction"]
categories = ["computer-vision", "wasm"]
license = "MIT"
description = "Pixel Intensity Comparison-based Object (PICO) detection library."
repository = "https://github.com/rostyq/pico-detect"
readme = "README.md"
exclude = [
  "assets",
  "tests",
  "models",
  "examples",
  ".gitattributes"
]

[lib]
name = "pico_detect"
bench = false

[dependencies]
nalgebra = { version = "0.33", default-features = false, features = [ "std" ] }
image = { version = "0.25", default-features = false }
imageproc = { version = "0.25", default-features = false }
rand = "0.9"
similarity-least-squares = "0.3"
rand_xoshiro = "0.7"
derive_builder = "0.12"
pixelutil-image = "0.1"
thiserror = "2"

[dev-dependencies]
image = "0.25"
imageproc = "0.25"
criterion = "0.6"
approx = "0.5"
rstest = "0.25"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
ab_glyph = "0.2"

[dev-dependencies.cargo-husky]
version = "1.5"
features = ["precommit-hook", "run-cargo-clippy"]

[[bench]]
name = "pico_detect_bench"
harness = false
path = "benches/lib.rs"

[[example]]
name = "detect-faces"
path = "examples/detect-faces/main.rs"

# uncomment for debugging
# [profile.release]
# debug = true

[profile.bench]
lto = true
